# apple-metal-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  _audit.py  _build_audit.sh  _extract_symbols.sh  build.rs
examples/: 01_get_device.rs  02_caps_buffer_texture.rs  03_command_buffer_blit.rs  04_compute_shader.rs  05_render_and_explicit_encoders.rs  06_resources_and_archives.rs  07_advanced_objects.rs
examples/common/: mod.rs
src/: advanced.rs  argument.rs  command.rs  exhaustive.rs  lib.rs  metalfx.rs  pipeline.rs  render.rs  state.rs  util.rs
src/ffi/: advanced.rs  command.rs  core.rs  exhaustive.rs  metalfx.rs  mod.rs  pipeline.rs  render.rs  state.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AppleMetalBridge/: Advanced.swift  AppleMetal.swift  Argument.swift  Buffer.swift  CommandExtras.swift  CommandQueue.swift  Compute.swift  Core.swift  Device.swift  Exhaustive.swift  MetalFX.swift  Pipeline.swift  Render.swift  State.swift  Support.swift  Texture.swift
swift-bridge/Sources/AppleMetalBridge/include/: module.modulemap
tests/: argument_buffer_bridge.rs  depth_stencil_bridge.rs  event_bridge.rs  exhaustive_symbols.rs  fence_bridge.rs  heap_bridge.rs  public_api_smoke.rs  sampler_bridge.rs
tests/common/: mod.rs
